paper/results/run4/httpx-auth-L239-constant_mutation/target_file/2000/dev_report/test_output.txt
"<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1126, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/__init__.py", line 2, in <module>
    from .handlers import ASGIHandler, WSGIHandler
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/handlers.py", line 3, in <module>
    import httpx
  File "/Users/akshankrithick/projects/httpx/httpx/__init__.py", line 2, in <module>
    from ._api import *
  File "/Users/akshankrithick/projects/httpx/httpx/_api.py", line 6, in <module>
    from ._client import Client
  File "/Users/akshankrithick/projects/httpx/httpx/_client.py", line 13, in <module>
    from ._auth import Auth, BasicAuth, FunctionAuth
  File "/Users/akshankrithick/projects/httpx/httpx/_auth.py", line 239
    key, value = field.split("=", 1)= field.strip().split("=", 0)
                 ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call